package engine.collision;

public class CollisionFactoryException extends Exception {

    public CollisionFactoryException(String message) {
        super(message);
    }
}
