@startuml

title __COLLISION's Class Diagram__\n

  package engine {
    package engine.collision {
      abstract class Collision {
          # timeFrame : float
          # restitution : float
          + Collision()
          + getThisNode()
          + getOtherNode()
          + getTimeFrame()
          {abstract} + resolve()
          + toString()
      }
    }
  }
  

  package engine {
    package engine.collision {
      class CollisionFactory {
          {static} + createCollision()
      }
    }
  }
  

  package engine {
    package engine.collision {
      class CollisionFactoryException {
          + CollisionFactoryException()
      }
    }
  }
  

  abstract class PrintStreamOrWriter {
      - PrintStreamOrWriter()
      {abstract} ~ lock()
      {abstract} ~ println()
  }
  

  class SentinelHolder {
      {static} + STACK_TRACE_ELEMENT_SENTINEL : StackTraceElement
      {static} + STACK_TRACE_SENTINEL : StackTraceElement[]
      - SentinelHolder()
  }
  

  class WrappedPrintStream {
      - printStream : PrintStream
      ~ WrappedPrintStream()
      ~ lock()
      ~ println()
  }
  

  class WrappedPrintWriter {
      - printWriter : PrintWriter
      ~ WrappedPrintWriter()
      ~ lock()
      ~ println()
  }
  

  package engine {
    package engine.collision {
      class CollisionHandler {
          - iterations : int
          + CollisionHandler()
          + resolve()
          + getIterations()
          + setIterations()
      }
    }
  }
  

  package engine {
    package engine.collision {
      class ParticleCollision {
          - restitution : float
          - intersection : float
          + ParticleCollision()
          + getParticles()
          + setParticles()
          + getRestitution()
          + setRestitution()
          + getIntersection()
          + setIntersection()
          + getNormal()
          + setNormal()
          # resolve()
          # calculateSeparatingVelocity()
          - resolveVelocity()
          - resolveIntersection()
      }
    }
  }
  

  Collision o-- PhysicalObject : thisNode
  Collision o-- EngineObject : otherNode
  Collision o-- Vector3D : normal
  CollisionFactoryException +-down- PrintStreamOrWriter
  CollisionFactoryException +-down- SentinelHolder
  CollisionFactoryException +-down- WrappedPrintStream
  CollisionFactoryException +-down- WrappedPrintWriter
  ParticleCollision o-- Particle : p1
  ParticleCollision o-- Particle : p2
  ParticleCollision o-- Vector3D : normal


right footer


PlantUML diagram generated by SketchIt! (https://bitbucket.org/pmesmeur/sketch.it)
For more information about this tool, please contact philippe.mesmeur@gmail.com
endfooter

@enduml
